force-app/main/default/objects/Forecast_Plan__c/Forecast_Plan__c.object-meta.xml
<CustomObject>
    <description>Object to assist in build out of forecast structure.</description>
    <label>Forecast Plan</label>
    <nameField>
        <label>Forecast Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>