force-app/main/default/objects/Forecast_Plan__c/fields/Actual_Plans__c.field-meta.xml
<CustomField>
    <fullName>Actual_Plans__c</fullName>
    <label>Actual Plans</label>
    <summarizedField>Forecast__c.Actual_Plan_Sales__c</summarizedField>
    <summaryForeignKey>Forecast__c.Forecast_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>