force-app/main/default/objects/Forecast_Plan__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <label>Actual Revenue</label>
    <summarizedField>Forecast__c.Actual_Revenue__c</summarizedField>
    <summaryForeignKey>Forecast__c.Forecast_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>