force-app/main/default/objects/Forecast_Plan__c/fields/Actual_v_Forecast_Plans_Sold__c.field-meta.xml
<CustomField>
    <fullName>Actual_v_Forecast_Plans_Sold__c</fullName>
    <formula>Actual_Plans__c /  Forecasted_Plans__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual v Forecast Plans Sold</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>