force-app/main/default/objects/Forecast_Plan__c/fields/Actual_v_Forecast_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_v_Forecast_Revenue__c</fullName>
    <formula>Actual_Revenue__c / Forecasted_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual v Forecast Revenue</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>