force-app/main/default/objects/Forecast_Plan__c/fields/Forecast_Channel__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Channel being forecast.</description>
    <inlineHelpText>Channel being forecast. If unsure view active channels for descriptions.</inlineHelpText>
    <label>Forecast Channel</label>
    <referenceTo>Forecast_Channel__c</referenceTo>
    <relationshipName>Forecast_Planners</relationshipName>
    <type>Lookup</type>
</CustomField>