force-app/main/default/objects/Forecast_Plan__c/fields/Forecast_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_End_Date__c</fullName>
    <description>End date of forecast.</description>
    <inlineHelpText>End date of forecast.</inlineHelpText>
    <label>Forecast End Date</label>
    <type>Date</type>
</CustomField>