force-app/main/default/objects/Forecast_Plan__c/fields/Forecast_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Notes__c</fullName>
    <description>Used for notes on this planned forecast</description>
    <inlineHelpText>Used for notes on this planned forecast</inlineHelpText>
    <label>Forecast Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>