force-app/main/default/objects/Forecast_Plan__c/fields/Forecast_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Start_Date__c</fullName>
    <description>Start date for forecast.</description>
    <inlineHelpText>Start date for forecast.</inlineHelpText>
    <label>Forecast Start Date</label>
    <type>Date</type>
</CustomField>