force-app/main/default/objects/Forecast_Plan__c/fields/Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Type__c</fullName>
    <description>Budgeted forecasts will be used by Finance to build the corresponding time period&apos;s budget. Pilot forecasts are used for new unproven partners to test capabilities and determine true volumes and capacity.</description>
    <inlineHelpText>Budgeted forecasts will be used by Finance to build the corresponding time period&apos;s budget. Pilot forecasts are used for new unproven partners to test capabilities and determine true volumes and capacity.</inlineHelpText>
    <label>Forecast Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budgeted</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>