force-app/main/default/objects/Forecast_Plan__c/fields/Forecasted_Leads__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Leads__c</fullName>
    <description># of leads forecast for this plan</description>
    <inlineHelpText># of leads forecast for this plan</inlineHelpText>
    <label>Forecasted Leads</label>
    <summarizedField>Forecast__c.Leads__c</summarizedField>
    <summaryForeignKey>Forecast__c.Forecast_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>