force-app/main/default/objects/Forecast_Plan__c/fields/Forecasted_Plans__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Plans__c</fullName>
    <description># of plans forecasted for this plan.</description>
    <inlineHelpText># of plans forecasted for this plan.</inlineHelpText>
    <label>Forecasted Plans</label>
    <summarizedField>Forecast__c.Plan_Sales__c</summarizedField>
    <summaryForeignKey>Forecast__c.Forecast_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>