force-app/main/default/objects/Forecast_Plan__c/fields/Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue__c</fullName>
    <description>Rollup of Forecasted Revenue from attached forecasts</description>
    <inlineHelpText>Rollup of Forecasted Revenue from attached forecasts</inlineHelpText>
    <label>Forecasted Revenue</label>
    <summarizedField>Forecast__c.Revenue__c</summarizedField>
    <summaryForeignKey>Forecast__c.Forecast_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>