force-app/main/default/objects/Forecast_Plan__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner for which this forecast is being planned.</description>
    <inlineHelpText>Partner for which this forecast is being planned.</inlineHelpText>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Forecast_Planners</relationshipName>
    <type>Lookup</type>
</CustomField>