force-app/main/default/objects/Forecast_Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>What products will be sold as part of this forecast?</description>
    <inlineHelpText>What products will be sold as part of this forecast?</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401(k)</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>